--- a/tests/Makefile
+++ b/tests/Makefile
@@ -4,7 +4,7 @@ OPT=
 CXXFLAGS= -g -G 
 EXTRA=-Xcompiler -rdynamic --std=c++11
 EXTRA+= -gencode arch=compute_60,code=sm_60 -rdc=true -L /usr/lib/x86_64-linux-gnu
-#EXTRA+=-DCUDAVEC
+EXTRA+=-DCUDAVEC
 
 OBJ= gpuport.o speed_test.o vec_test.o mempool_main.o alloc_vec_test.o
 
