Add&Delete test

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -7,7 +7,7 @@ EXTRA+= -gencode arch=compute_60,code=sm_60 -rdc=true -L /usr/lib/x86_64-linux-g
 EXTRA+=-DCUDAVEC -DDEBUG
 
 GTEST=-lgtest -lgtest_main -lpthread
-OBJ= gpuport.o speed_test.o vec_test.o mempool_main.o vec_of_vec_test.o gtest_vec.o gtest_hashmap.o gtest_map_rw.o map_operators.o
+OBJ= gpuport.o speed_test.o vec_test.o mempool_main.o vec_of_vec_test.o gtest_vec.o gtest_hashmap.o gtest_map_rw.o map_operators.o map_add_remove.o
 
 all: ${OBJ}
 
@@ -22,7 +22,8 @@ allclean:
 	rm gtesthashmap &
 	rm mempool &
 	rm map_rw &
-	rm map_operators_test
+	rm map_operators_test &
+	rm map_add_remove
 
 
 gpuport.o: hash_gpu_vs_cpu/gpuport.cu
@@ -36,6 +37,9 @@ gtest_hashmap_rw.o: gtest_hashmap_rw/main.cu
 
 map_operators.o: map_operators/main.cu
 	${CC} ${CXXFLAGS} ${OPT} ${EXTRA} ${GTEST}  -o map_operators_test map_operators/main.cu
+
+map_add_remove.o: add_remove_map_elements/main.cu
+	${CC} ${CXXFLAGS} ${OPT} ${EXTRA} ${GTEST}  -o map_add_remove add_remove_map_elements/main.cu
 
 vec_test.o: vector_tests/vec_test.cu
 	${CC} ${CXXFLAGS} ${OPT} ${EXTRA}  -o vec_test vector_tests/vec_test.cu 
