--- a/tests/Makefile
+++ b/tests/Makefile
@@ -4,7 +4,7 @@ OPT=
 CXXFLAGS= -g -G 
 EXTRA= -Xcompiler -rdynamic --std=c++11
 EXTRA+= -gencode arch=compute_60,code=sm_60 -rdc=true -L /usr/lib/x86_64-linux-gnu
-EXTRA+=-DCUDAVEC -DDEBUG
+EXTRA+=-DCUDAVEC -DHASHMAPDEBUG
 
 GTEST=-lgtest -lgtest_main -lpthread
 OBJ= gpuport.o speed_test.o vec_test.o mempool_main.o vec_of_vec_test.o gtest_vec.o gtest_hashmap.o gtest_map_rw.o map_operators.o map_add_remove.o
