--- a/tests/Makefile
+++ b/tests/Makefile
@@ -2,13 +2,14 @@ CC=nvcc
 LNK=nvcc 
 OPT=
 CXXFLAGS= -g -G 
-EXTRA= -Xcompiler -rdynamic --std=c++11
+EXTRA= -Xcompiler -rdynamic --std=c++14
 EXTRA+= -gencode arch=compute_60,code=sm_60 -rdc=true -L /usr/lib/x86_64-linux-gnu
 EXTRA+=-DCUDAVEC -DHASHMAPDEBUG
 
 GTEST=-lgtest -lgtest_main -lpthread
-OBJ= gpuport.o speed_test.o vec_test.o mempool_main.o vec_of_vec_test.o gtest_vec.o gtest_hashmap.o gtest_map_rw.o map_operators.o map_add_remove.o ctor_test
+OBJ= gpuport.o speed_test.o vec_test.o mempool_main.o vec_of_vec_test.o gtest_vec.o gtest_hashmap.o gtest_map_rw.o map_operators.o map_add_remove.o ctor_test vecspeedtest
 
+default: all
 all: ${OBJ}
 
 clean: 
@@ -24,7 +25,8 @@ allclean:
 	rm map_rw &
 	rm map_operators_test &
 	rm map_add_remove & 
-	rm ctor_test
+	rm ctor_test &
+	rm vecspeedtest
 
 
 gpuport.o: hash_gpu_vs_cpu/gpuport.cu
@@ -53,6 +55,9 @@ mempool_main.o: mempool_test/mempool_main.cu
 
 gtest_vec.o: gtest_vec/vec_test.cu
 	${CC} ${CXXFLAGS} ${OPT} ${EXTRA} ${GTEST} -o gtestvec gtest_vec/vec_test.cu
+
+vecspeedtest: vec_speed_test/main.cu
+	${CC} ${CXXFLAGS} ${OPT} ${EXTRA} -o vecspeedtest vec_speed_test/main.cu
 
 ctor_test.o: constructor_test/vec_test.cu
 	${CC} ${CXXFLAGS} ${OPT} ${EXTRA} ${GTEST} -o ctor_test constructor_test/vec_test.cu
