--- a/tests/Makefile
+++ b/tests/Makefile
@@ -4,10 +4,10 @@ OPT= -O3
 CXXFLAGS= -g -G 
 EXTRA= -Xcompiler -rdynamic --std=c++14
 EXTRA+= -gencode arch=compute_60,code=sm_60 -rdc=true -L /usr/lib/x86_64-linux-gnu
-EXTRA+=-DCUDAVEC -DHASHMAPDEBUG --expt-relaxed-constexpr
+EXTRA+=  -DHASHMAPDEBUG --expt-relaxed-constexpr
 
 GTEST=-lgtest -lgtest_main -lpthread
-OBJ= map_gpu_vs_cpu.o speed_test.o	  mempool_main.o	  gtest_vec.o	  gtest_hashmap.o	  map_add_remove.o 	  vecspeedtest
+OBJ= map_gpu_vs_cpu.o speed_test.o	  mempool_main.o	  gtest_vec.o	gtest_vec_host.o	  gtest_hashmap.o	  map_add_remove.o 	  vecspeedtest
 
 default: all
 all: ${OBJ}
@@ -20,6 +20,7 @@ allclean:
 	rm vec_test &
 	rm vec_of_vec &
 	rm gtestvec &
+	rm gtestvechost &
 	rm gtesthashmap &
 	rm mempool &
 	rm map_rw &
@@ -44,6 +45,9 @@ mempool_main.o: mempool_test/mempool_main.cu
 
 gtest_vec.o: gtest_vec/vec_test.cu
 	${CC} ${CXXFLAGS} ${OPT} ${EXTRA} ${GTEST} -o gtestvec gtest_vec/vec_test.cu
+
+gtest_vec_host.o: gtest_vec_host/vec_test.cu
+	${CC} ${CXXFLAGS} ${OPT} ${EXTRA} ${GTEST} -o gtestvechost gtest_vec_host/vec_test.cu
 
 vecspeedtest: vec_speed_test/main.cu
 	${CC} ${CXXFLAGS} ${OPT} ${EXTRA} -o vecspeedtest vec_speed_test/main.cu -DPROFINY_CALL_GRAPH_PROFILER -lboost_timer -lboost_chrono -lboost_system
