--- a/tests/Makefile
+++ b/tests/Makefile
@@ -7,7 +7,7 @@ EXTRA+= -gencode arch=compute_60,code=sm_60 -rdc=true -L /usr/lib/x86_64-linux-g
 EXTRA+=  -DHASHMAPDEBUG --expt-relaxed-constexpr 
 
 GTEST=-lgtest -lgtest_main -lpthread
-OBJ= map_gpu_vs_cpu.o speed_test.o	  mempool_main.o	  gtest_vec.o	gtest_vec_host.o	gtest_vec_device.o  gtest_hashmap.o	  map_add_remove.o 	  vecspeedtest hashmap_bench.o
+OBJ= map_gpu_vs_cpu.o speed_test.o	  mempool_main.o	  gtest_vec.o	gtest_vec_host.o	gtest_vec_device.o  gtest_hashmap.o	  map_add_remove.o 	  vecspeedtest hashmap_bench.o hashmap_stress_test.o
 
 default: all
 all: ${OBJ}
@@ -27,6 +27,7 @@ allclean:
 	rm map_rw &
 	rm map_add_remove & 
 	rm hashmap_bench &
+	rm hashmap_stress_test &
 	rm vecspeedtest
 
 
@@ -62,3 +63,6 @@ gtest_hashmap.o: gtest_hasmap/unit.cu
 
 hashmap_bench.o: hashmap_unit_test/main.cu
 	${CC} ${CXXFLAGS} ${OPT} ${EXTRA} ${GTEST} -o hashmap_bench hashmap_unit_test/main.cu
+
+hashmap_stress_test.o: 100M_test/main.cu
+	${CC} ${CXXFLAGS} ${OPT} ${EXTRA} ${GTEST} -o hashmap_stress_test 100M_test/main.cu
