Update compaction methods. Custom prefix scan with no BCAM  (not pushed yet)

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,13 +1,13 @@
 CC=nvcc  
 LNK=nvcc 
-OPT= 
-CXXFLAGS= -g -G 
+OPT= -O3
+CXXFLAGS= 
 EXTRA= -Xcompiler -rdynamic --std=c++14
 EXTRA+= -gencode arch=compute_60,code=sm_60 -rdc=true -L /usr/lib/x86_64-linux-gnu
 EXTRA+=  -DHASHMAPDEBUG --expt-relaxed-constexpr 
 
 GTEST=-lgtest -lgtest_main -lpthread
-OBJ= map_gpu_vs_cpu.o speed_test.o	  mempool_main.o	  gtest_vec.o	gtest_vec_host.o	gtest_vec_device.o  gtest_hashmap.o	  map_add_remove.o 	  vecspeedtest hashmap_bench.o hashmap_stress_test.o
+OBJ= map_gpu_vs_cpu.o speed_test.o	  mempool_main.o	  gtest_vec.o	gtest_vec_host.o	gtest_vec_device.o  gtest_hashmap.o	  map_add_remove.o 	  vecspeedtest hashmap_bench.o hashmap_stress_test.o stream_compaction.o
 
 default: all
 all: ${OBJ}
@@ -28,7 +28,8 @@ allclean:
 	rm map_add_remove & 
 	rm hashmap_bench &
 	rm hashmap_stress_test &
-	rm vecspeedtest
+	rm vecspeedtest &
+	rm compaction
 
 
 map_gpu_vs_cpu.o: hash_gpu_vs_cpu/gpuport.cu
@@ -54,6 +55,9 @@ gtest_vec_host.o: gtest_vec_host/vec_test.cu
 
 gtest_vec_device.o: gtest_vec_device/vec_test.cu
 	${CC} ${CXXFLAGS} ${OPT} ${EXTRA} ${GTEST} -o gtestvecdevice gtest_vec_device/vec_test.cu
+
+stream_compaction.o: stream_compaction/main.cu
+	${CC} ${CXXFLAGS} ${OPT} ${EXTRA} ${GTEST} -o compaction stream_compaction/main.cu
 
 vecspeedtest: vec_speed_test/main.cu
 	${CC} ${CXXFLAGS} ${OPT} ${EXTRA} -o vecspeedtest vec_speed_test/main.cu -DPROFINY_CALL_GRAPH_PROFILER -lboost_timer -lboost_chrono -lboost_system
