--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,11 +1,10 @@
 CC=nvcc  
 LNK=nvcc 
-OPT= 
-CXXFLAGS= -O3
-EXTRA=  -Xcompiler -rdynamic --std=c++14
-EXTRA+= -gencode arch=compute_60,code=sm_60 -rdc=true -L /usr/lib/x86_64-linux-gnu
+OPT=  -Xcompiler -rdynamic -lineinfo --use_fast_math 
+CXXFLAGS=
+EXTRA=  --std=c++14
+EXTRA+= -gencode arch=compute_60,code=sm_60  -L /usr/lib/x86_64-linux-gnu
 EXTRA+=  -DHASHMAPDEBUG --expt-relaxed-constexpr 
-
 GTEST=-lgtest -lgtest_main -lpthread
 OBJ= map_gpu_vs_cpu.o speed_test.o	  mempool_main.o	  gtest_vec.o	gtest_vec_host.o	gtest_vec_device.o  gtest_hashmap.o	  map_add_remove.o 	  vecspeedtest hashmap_bench.o hashmap_stress_test.o stream_compaction.o
 
