--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,12 +1,12 @@
 CC=nvcc  
 LNK=nvcc 
 OPT=  -Xcompiler -O3 
-CXXFLAGS=
+CXXFLAGS= 
 EXTRA= -g  --std=c++17
 EXTRA+= -gencode arch=compute_60,code=sm_60  -L /usr/lib/x86_64-linux-gnu
 EXTRA+=  -DHASHMAPDEBUG --expt-relaxed-constexpr 
 GTEST=-lgtest -lgtest_main -lpthread
-OBJ= gtest_vec_host.o	gtest_vec_device.o  gtest_hashmap.o stream_compaction.o delete_mechanism.o insertion_mechanism.o
+OBJ= gtest_vec_host.o	gtest_vec_device.o  gtest_hashmap.o stream_compaction.o delete_mechanism.o insertion_mechanism.o hybrid_cpu.o hybrid_gpu.o
 
 default: tests
 tests: ${OBJ}
@@ -20,6 +20,8 @@ allclean:
 	rm gtest_hashmap & 
 	rm compaction &
 	rm delete_mechanism &
+	rm hybrid_cpu & 
+	rm hybrid_gpu &
 	rm insertion
 
 gtest_hashmap.o: hashmap_unit_test/main.cu
@@ -39,3 +41,9 @@ delete_mechanism.o: delete_by_compaction/main.cu
 
 insertion_mechanism.o: insertion_mechanism/main.cu
 	${CC} ${CXXFLAGS} ${OPT} ${EXTRA} ${GTEST} -o insertion insertion_mechanism/main.cu
+
+hybrid_gpu.o: hybrid/main.cpp
+	${CC} -x cu  ${CXXFLAGS} ${OPT} ${EXTRA} ${GTEST} -o hybrid_gpu hybrid/main.cpp
+
+hybrid_cpu.o: hybrid/main.cpp
+	g++ -fsanitize=address -fno-omit-frame-pointer ${CXXFLAGS} -O3  -std=c++17 -DSPLIT_HOST_ONLY -DHASHINATOR_HOST_ONLY  -o hybrid_cpu hybrid/main.cpp -I/usr/local/cuda/include/ -L/usr/local/cuda/lib64 -lcudart -lcuda  -lgtest -lgtest_main -lpthread  -Wall  -Wpedantic -Werror -static-libasan
