--- a/tests/Makefile
+++ b/tests/Makefile
@@ -2,7 +2,7 @@ CC=nvcc
 LNK=nvcc 
 OPT=  -Xcompiler 
 CXXFLAGS= 
-EXTRA= -g  --std=c++17
+EXTRA= -g3  --std=c++17
 EXTRA+= -gencode arch=compute_60,code=sm_60  -L /usr/lib/x86_64-linux-gnu
 EXTRA+=  -DHASHMAPDEBUG --expt-relaxed-constexpr 
 GTEST=-lgtest -lgtest_main -lpthread
