Enable lambbdas in compaction methods

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -4,7 +4,7 @@ OPT=  -Xcompiler
 CXXFLAGS= 
 EXTRA= -g3  --std=c++17
 EXTRA+= -gencode arch=compute_60,code=sm_60  -L /usr/lib/x86_64-linux-gnu
-EXTRA+=  -DHASHMAPDEBUG --expt-relaxed-constexpr 
+EXTRA+=  -DHASHMAPDEBUG --expt-relaxed-constexpr  --expt-extended-lambda
 GTEST=-lgtest -lgtest_main -lpthread
 OBJ= gtest_vec_host.o	gtest_vec_device.o  gtest_hashmap.o stream_compaction.o delete_mechanism.o insertion_mechanism.o hybrid_cpu.o hybrid_gpu.o pointer_test.o
 
