--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,5 +15,5 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: configure
-      run: cd tests; ./run_tests.sh
+      run: bash; cd tests; ./run_tests.sh
     
