--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,6 +14,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: configure
-      run: bash; cd tests; ./run_tests.sh
+    - name: run_tests
+      run: export TERM=xterm ; cd tests; ./run_tests.sh
     
