--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,5 +15,5 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: run_tests
-      run: export TERM=xterm ; cd tests; which nvcc ;  ./run_tests.sh
+      run:  cd tests; which nvcc ;  ./run_tests.sh
     
