--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,4 +16,5 @@ jobs:
     - uses: actions/checkout@v3
     - name: run_tests
       run:  cd tests; which nvcc ;  ./run_tests.sh
+      shell: bash
     
