--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,5 +16,5 @@ jobs:
     - uses: actions/checkout@v3
     - name: run_tests
       shell:  bash
-      run: ls ; echo $PATH
+      run: ls ; echo $PATH; /usr/local/cuda/bin//nvcc --help
     
