--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,6 +15,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: run_tests
-      shell:  bash
-      run: echo "$HOME/.local/bin" >> $GITHUB_PATH ;  ls ; echo $PATH; /usr/local/cuda/bin//nvcc --help
+      shell: bash -ieo pipefail {0}
+      run: ls ; echo $PATH; /usr/local/cuda/bin//nvcc --help
     
