--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,6 +15,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: run_tests
-      shell: bash 
+      shell: bash -ileo pipefail {0} 
       run: ls ; echo "/usr/local/" >> $GITHUB_PATH ;echo $PATH; /usr/local/cuda/bin//nvcc --help
     
