--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,5 +16,5 @@ jobs:
     - uses: actions/checkout@v3
     - name: run_tests
       shell: bash
-      run: ls ; /usr/local/cuda-11.8/bin/nvcc  --help
+      run: ls ; make gtest_hashmap.o
     
