--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,17 +14,5 @@ jobs:
     - uses: actions/checkout@v3
     - name: run_tests
       shell: bash
-      run: cd tests; nvcc -V
+      run: cd tests; ./run_tests.sh
     
-    
-#     steps:
-#     - uses: Jimver/cuda-toolkit@v0.2.10
-#       id: cuda-toolkit
-#       with:
-#         cuda: '12.1.0'
-
-#     - run: echo "Installed cuda version is:${{steps.cuda-toolkit.outputs.cuda}}"
-
-#     - run: echo "Cuda install location:${{steps.cuda-toolkit.outputs.CUDA_PATH}}"
-
-#     - run: nvcc -V
