--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,5 +14,5 @@ jobs:
     - uses: actions/checkout@v3
     - name: run_tests
       shell: bash
-      run: cd tests; ./run_tests.sh
+      run: cd unit_tests; ./run_tests.sh
     
