--- a/unit_tests/Makefile
+++ b/unit_tests/Makefile
@@ -3,9 +3,9 @@ LNK=nvcc
 OPT= -O3 -Xcompiler 
 CXXFLAGS= 
 EXTRA= -g3  --std=c++17
-EXTRA+= -gencode arch=compute_60,code=sm_60  -L /usr/lib/x86_64-linux-gnu
-EXTRA+=  -DHASHMAPDEBUG --expt-relaxed-constexpr  --expt-extended-lambda
-GTEST=-lgtest -lgtest_main -lpthread
+EXTRA+= -gencode arch=compute_60,code=sm_60  
+EXTRA+=  -DHASHMAPDEBUG --expt-relaxed-constexpr  --expt-extended-lambda -lpthread
+GTEST= -L//home/kstppd/libs/googletest/build/lib  -I/home/kstppd/libs/googletest/googletest/include -lgtest -lgtest_main -lpthread
 OBJ= gtest_vec_host.o	gtest_vec_device.o  gtest_hashmap.o stream_compaction.o stream_compaction2.o delete_mechanism.o insertion_mechanism.o hybrid_cpu.o hybrid_gpu.o pointer_test.o benchmark.o benchmarkLF.o tbPerf.o realistic.o 
 
 
