--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,5 +14,5 @@ jobs:
     - uses: actions/checkout@v3
     - name: run_tests
       shell: bash
-      run: mkdir subprojects build; meson wrap install gtest ; meson setup build; meson test -C build/ -t 10 ;
+      run: mkdir subprojects build; meson wrap install gtest ; meson setup build; meson test -C build/ -t 10 --num-processes 1 ;
     
