--- a/meson.build
+++ b/meson.build
@@ -18,6 +18,7 @@ endif
 hashinator_unit = executable('hashmap_test', 'unit_tests/hashmap_unit_test/main.cu',dependencies :gtest_dep )
 splitvector_device_unit = executable('splitvector_device_test', 'unit_tests/gtest_vec_device/vec_test.cu',dependencies :gtest_dep )
 splitvector_host_unit = executable('splitvector_host_test', 'unit_tests/gtest_vec_host/vec_test.cu',dependencies :gtest_dep )
+splitvector_device_vector_unit = executable('splitvector_device_vector_test', 'unit_tests/gtest_dev_vec/vec_test.cu',dependencies :gtest_dep )
 compaction_unit = executable('compaction_test', 'unit_tests/stream_compaction/race.cu',dependencies :gtest_dep )
 compaction2_unit = executable('compaction2_test', 'unit_tests/stream_compaction/preallocated.cu', cuda_args:['--default-stream=per-thread','-Xcompiler','-fopenmp'],link_args : ['-fopenmp'],dependencies :gtest_dep)
 compaction3_unit = executable('compaction3_test', 'unit_tests/stream_compaction/unit.cu', cuda_args:'--default-stream=per-thread',link_args : ['-fopenmp'],dependencies :gtest_dep)
@@ -35,6 +36,7 @@ hybridGPU = executable('hybrid_gpu', 'unit_tests/hybrid/main.cu',dependencies :g
 test('HashinatorTest', hashinator_unit)
 test('SplitVectorDeviceTest', splitvector_device_unit)
 test('SplitVectorHostTest', splitvector_host_unit)
+test('SplitVectorDeviceVectorTest',splitvector_device_vector_unit)
 test('CompactionTest',  compaction_unit)
 test('CompactionTest2',  compaction2_unit)
 test('CompactionTest3',  compaction3_unit)
